# prisma-python-sample

./: .env.sample  .gitignore  Dockerfile  Makefile  db.py  docker-compose.yml  main.py  pyproject.toml  schema.prisma
.devcontainer/: devcontainer.json
prisma_python_sample/: main.py  prisma.py  roter.py
prisma_python_sample/tests/: test_main.py
